# SAGE-Enhanced

./: .env-template  .gitignore  Dockerfile  HANDOVER.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  deps.py  outputs.py  phases.py  projects.py  review.py  serializers.py  uploads.py
backend/app/benchmarks/: compare.py  feasibility.py  manifest.py  timeline.py  transcript.py
backend/app/orchestration/: engine.py  ledger.py  revision.py
backend/app/orchestration/tasks/: assembly.py  pipeline.py  runner.py
backend/app/providers/: __init__.py  base.py  claude.py  mock.py  registry.py  val.py
backend/app/schemas/: state.py  tasks.py
backend/app/storage/: __init__.py  base.py  sqlite_store.py
backend/app/validation/: lock_enforcement.py  plan_fidelity.py  report.py  schema_checks.py  xml_integrity.py
backend/app/xmlengine/: parser.py  rebuilder.py  timing.py
backend/benchmarks/: README.md
backend/benchmarks/cases/lnd_showcase/: case.json
backend/benchmarks/cases/tss/: case.json
backend/scripts/: audit_real_export.py  benchmark_case.py  ingest_case.py  run_live_loop.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_core_loop.py  test_core_loop.py  test_reopen_and_delete.py
backend/tests/fixtures/benchmarks/: README.md  (+1 more)
backend/tests/unit/: test_benchmarks.py  test_crew_interviewer_setup.py  test_lock_enforcement.py  test_phase_machine.py  test_premiere_realistic.py  test_provider_policy.py  test_upload_validation.py  test_val_and_ops.py
(+84 files in other folders)
