[project]
name = "sage-internal-backend"
version = "0.1.0"
description = "SAGE Internal V1 backend — Story Assembly and Guidance Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
